--- a/DeepanshuExercise/Final Project/IMPML_Week11_Students.ipynb
+++ b/DeepanshuExercise/Final Project/IMPML_Week11_Students.ipynb
@@ -4510,11 +4510,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 41,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-11T06:30:42.183362Z",
-     "start_time": "2021-03-11T06:30:42.130709Z"
+     "end_time": "2021-03-11T06:35:29.436577Z",
+     "start_time": "2021-03-11T06:35:29.397651Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df = df.drop(labels='reservation_status_date', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T06:43:29.673903Z",
+     "start_time": "2021-03-11T06:43:29.648611Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df['agent'] = df['agent'].fillna(df['agent'].mode()[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T06:43:30.788276Z",
+     "start_time": "2021-03-11T06:43:30.686877Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 118902 entries, 0 to 119389\n",
+      "Data columns (total 67 columns):\n",
+      " #   Column                          Non-Null Count   Dtype  \n",
+      "---  ------                          --------------   -----  \n",
+      " 0   hotel                           118902 non-null  int64  \n",
+      " 1   lead_time                       118902 non-null  int64  \n",
+      " 2   arrival_date_year               118902 non-null  int64  \n",
+      " 3   arrival_date_month              118902 non-null  int64  \n",
+      " 4   stays_in_week_nights            118902 non-null  int64  \n",
+      " 5   country                         118902 non-null  int64  \n",
+      " 6   is_repeated_guest               118902 non-null  int64  \n",
+      " 7   previous_cancellations          118902 non-null  int64  \n",
+      " 8   previous_bookings_not_canceled  118902 non-null  int64  \n",
+      " 9   booking_changes                 118902 non-null  int64  \n",
+      " 10  agent                           118902 non-null  float64\n",
+      " 11  days_in_waiting_list            118902 non-null  int64  \n",
+      " 12  adr                             118902 non-null  float64\n",
+      " 13  required_car_parking_spaces     118902 non-null  int64  \n",
+      " 14  total_of_special_requests       118902 non-null  int64  \n",
+      " 15  is_family                       118902 non-null  int64  \n",
+      " 16  total_customer                  118902 non-null  float64\n",
+      " 17  deposit_given                   118902 non-null  int64  \n",
+      " 18  total_nights                    118902 non-null  int64  \n",
+      " 19  meal_BB                         118902 non-null  uint8  \n",
+      " 20  meal_FB                         118902 non-null  uint8  \n",
+      " 21  meal_HB                         118902 non-null  uint8  \n",
+      " 22  meal_SC                         118902 non-null  uint8  \n",
+      " 23  meal_Undefined                  118902 non-null  uint8  \n",
+      " 24  market_segment_Aviation         118902 non-null  uint8  \n",
+      " 25  market_segment_Complementary    118902 non-null  uint8  \n",
+      " 26  market_segment_Corporate        118902 non-null  uint8  \n",
+      " 27  market_segment_Direct           118902 non-null  uint8  \n",
+      " 28  market_segment_Groups           118902 non-null  uint8  \n",
+      " 29  market_segment_Offline TA/TO    118902 non-null  uint8  \n",
+      " 30  market_segment_Online TA        118902 non-null  uint8  \n",
+      " 31  market_segment_Undefined        118902 non-null  uint8  \n",
+      " 32  distribution_channel_Corporate  118902 non-null  uint8  \n",
+      " 33  distribution_channel_Direct     118902 non-null  uint8  \n",
+      " 34  distribution_channel_GDS        118902 non-null  uint8  \n",
+      " 35  distribution_channel_TA/TO      118902 non-null  uint8  \n",
+      " 36  distribution_channel_Undefined  118902 non-null  uint8  \n",
+      " 37  reserved_room_type_A            118902 non-null  uint8  \n",
+      " 38  reserved_room_type_B            118902 non-null  uint8  \n",
+      " 39  reserved_room_type_C            118902 non-null  uint8  \n",
+      " 40  reserved_room_type_D            118902 non-null  uint8  \n",
+      " 41  reserved_room_type_E            118902 non-null  uint8  \n",
+      " 42  reserved_room_type_F            118902 non-null  uint8  \n",
+      " 43  reserved_room_type_G            118902 non-null  uint8  \n",
+      " 44  reserved_room_type_H            118902 non-null  uint8  \n",
+      " 45  reserved_room_type_L            118902 non-null  uint8  \n",
+      " 46  reserved_room_type_P            118902 non-null  uint8  \n",
+      " 47  assigned_room_type_A            118902 non-null  uint8  \n",
+      " 48  assigned_room_type_B            118902 non-null  uint8  \n",
+      " 49  assigned_room_type_C            118902 non-null  uint8  \n",
+      " 50  assigned_room_type_D            118902 non-null  uint8  \n",
+      " 51  assigned_room_type_E            118902 non-null  uint8  \n",
+      " 52  assigned_room_type_F            118902 non-null  uint8  \n",
+      " 53  assigned_room_type_G            118902 non-null  uint8  \n",
+      " 54  assigned_room_type_H            118902 non-null  uint8  \n",
+      " 55  assigned_room_type_I            118902 non-null  uint8  \n",
+      " 56  assigned_room_type_K            118902 non-null  uint8  \n",
+      " 57  assigned_room_type_L            118902 non-null  uint8  \n",
+      " 58  assigned_room_type_P            118902 non-null  uint8  \n",
+      " 59  customer_type_Contract          118902 non-null  uint8  \n",
+      " 60  customer_type_Group             118902 non-null  uint8  \n",
+      " 61  customer_type_Transient         118902 non-null  uint8  \n",
+      " 62  customer_type_Transient-Party   118902 non-null  uint8  \n",
+      " 63  reservation_status_Canceled     118902 non-null  uint8  \n",
+      " 64  reservation_status_Check-Out    118902 non-null  uint8  \n",
+      " 65  reservation_status_No-Show      118902 non-null  uint8  \n",
+      " 66  is_canceled                     118902 non-null  int64  \n",
+      "dtypes: float64(3), int64(17), uint8(47)\n",
+      "memory usage: 24.4 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T06:43:34.302810Z",
+     "start_time": "2021-03-11T06:43:34.276144Z"
     }
    },
    "outputs": [],
@@ -4534,11 +4657,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 59,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-11T06:32:25.391416Z",
-     "start_time": "2021-03-11T06:32:25.284600Z"
+     "end_time": "2021-03-11T06:43:35.391264Z",
+     "start_time": "2021-03-11T06:43:35.335789Z"
     }
    },
    "outputs": [],
@@ -4566,12 +4689,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 60,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T06:43:36.547311Z",
+     "start_time": "2021-03-11T06:43:36.536739Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "from import \n",
-    "cart = "
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "cart = DecisionTreeClassifier(max_depth = 12)"
    ]
   },
   {
@@ -4585,12 +4713,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 63,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T06:44:22.943773Z",
+     "start_time": "2021-03-11T06:44:22.808487Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "cart_model = \n",
-    "y_pred_cart = "
+    "cart_model = cart.fit(X = X_train, y = y_train)\n",
+    "y_pred_cart = cart_model.predict(X_test)"
    ]
   },
   {
@@ -4615,9 +4748,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 64,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T06:44:37.436269Z",
+     "start_time": "2021-03-11T06:44:37.331956Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision Tree Model - reservation_status included\n",
+      "Accuracy Score: 1.0\n",
+      "\n",
+      "Confusion Matrix:\n",
+      " [[22353     0]\n",
+      " [    0 13318]]\n",
+      "\n",
+      "AUC Score: 1.0\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.metrics import accuracy_score, roc_auc_score, roc_curve, confusion_matrix, auc\n",
     "print('Decision Tree Model - reservation_status included')\n",
@@ -4644,11 +4797,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 65,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T06:46:23.991925Z",
+     "start_time": "2021-03-11T06:46:23.966573Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "df = "
+    "df = df.drop(labels = ['reservation_status_Canceled', 'reservation_status_Check-Out', 'reservation_status_No-Show'], axis = 1)"
    ]
   },
   {
