--- a/bayesian_made_simple/dice_01.ipynb
+++ b/bayesian_made_simple/dice_01.ipynb
@@ -2,14 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-24T06:22:19.390103Z",
-     "start_time": "2021-05-24T06:22:19.371438Z"
+     "end_time": "2021-05-24T07:30:23.578353Z",
+     "start_time": "2021-05-24T07:30:21.418887Z"
     }
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Arjun Janamatti\\Anaconda3\\envs\\tf_nptel\\lib\\site-packages\\numpy\\core\\__init__.py:29: UserWarning: loaded more than 1 DLL from .libs:\n",
+      "C:\\Users\\Arjun Janamatti\\Anaconda3\\envs\\tf_nptel\\lib\\site-packages\\numpy\\.libs\\libopenblas.PYQHXLVVQ7VESDPUVUADXEVJOBGHJPAY.gfortran-win_amd64.dll\n",
+      "C:\\Users\\Arjun Janamatti\\Anaconda3\\envs\\tf_nptel\\lib\\site-packages\\numpy\\.libs\\libopenblas.TXA6YQSD3GCQQC22GEQ54J2UDCXDXHWN.gfortran-win_amd64.dll\n",
+      "  stacklevel=1)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -50,11 +60,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-24T06:22:20.817997Z",
-     "start_time": "2021-05-24T06:22:20.802761Z"
+     "end_time": "2021-05-24T07:30:23.593580Z",
+     "start_time": "2021-05-24T07:30:23.581315Z"
     }
    },
    "outputs": [],
@@ -66,11 +76,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-24T06:22:21.208417Z",
-     "start_time": "2021-05-24T06:22:21.189079Z"
+     "end_time": "2021-05-24T08:36:58.264605Z",
+     "start_time": "2021-05-24T08:36:58.256075Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.25, 0.25, 0.25, 0.25]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(np.repeat([1/len((dice_sides))], len(dice_sides)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-24T08:40:27.704826Z",
+     "start_time": "2021-05-24T08:40:27.694337Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class dice_result:\n",
+    "    def __init__(self, data, dice_sides, priors_index):\n",
+    "        self.data = data\n",
+    "        self.dice_sides = dice_sides\n",
+    "        self.priors_index = priors_index\n",
+    "        self.priors = list(np.repeat([1/len(self.dice_sides)], len(self.dice_sides)))\n",
+    "        \n",
+    "    def GetLikelihood(self):\n",
+    "        '''\n",
+    "        Will give likelihood in a single update\n",
+    "        data = result from dice after randomly picking a dice from one of the dice_sides\n",
+    "        dice_sides = list of dices with max sides available\n",
+    "        '''\n",
+    "        likelihood_l = []\n",
+    "        for dice in self.dice_sides:\n",
+    "            value = 1\n",
+    "            for d in self.data:\n",
+    "                if d <= dice:\n",
+    "                    value *= (1/dice)\n",
+    "                else:\n",
+    "                    value *= 0\n",
+    "            likelihood_l.append(value)\n",
+    "        return likelihood_l\n",
+    "    \n",
+    "    def GetPost():\n",
+    "        new_df = pd.DataFrame()\n",
+    "        new_df['priors'] = self.priors\n",
+    "        new_df['likelihood'] = self.GetLikelihood()\n",
+    "        new_df.index = self.priors_index\n",
+    "        new_df['unnormalized_posterior'] = new_df['priors'] * new_df['likelihood']\n",
+    "        new_df['prob_data'] = [sum(new_df['unnormalized_posterior']) for num in range(len(new_df))]\n",
+    "        new_df['posterior'] = (new_df['priors'] * new_df['likelihood']) / new_df['prob_data']\n",
+    "        return new_df\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [8, 7, 7, 5, 4]\n",
+    "dice_sides = [4,6,8,12]\n",
+    "priors_index = ['4-sided die', '6-sided die', '8-sided die', '12-sided die']\n",
+    "result_df = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-24T07:30:23.608580Z",
+     "start_time": "2021-05-24T07:30:23.595578Z"
     }
    },
    "outputs": [],
@@ -88,11 +182,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-24T06:22:21.567583Z",
-     "start_time": "2021-05-24T06:22:21.542210Z"
+     "end_time": "2021-05-24T07:30:23.655579Z",
+     "start_time": "2021-05-24T07:30:23.610582Z"
     }
    },
    "outputs": [
@@ -169,7 +263,7 @@
        "12-sided die    0.25    0.083333                0.020833    0.09375   0.222222"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,11 +285,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-24T07:28:40.485278Z",
-     "start_time": "2021-05-24T07:28:40.451990Z"
+     "end_time": "2021-05-24T07:30:23.671623Z",
+     "start_time": "2021-05-24T07:30:23.657689Z"
     }
    },
    "outputs": [],
@@ -221,26 +315,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-24T07:28:48.058053Z",
-     "start_time": "2021-05-24T07:28:48.050065Z"
+     "end_time": "2021-05-24T07:36:36.594709Z",
+     "start_time": "2021-05-24T07:36:36.586032Z"
     }
    },
    "outputs": [],
    "source": [
-    "data = [6,6,6,6]\n",
+    "data = [8, 7, 7, 5, 4]\n",
     "dice_sides = [4,6,8,12]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-24T07:28:56.157043Z",
-     "start_time": "2021-05-24T07:28:56.131834Z"
+     "end_time": "2021-05-24T07:36:37.031010Z",
+     "start_time": "2021-05-24T07:36:37.007174Z"
     }
    },
    "outputs": [
@@ -278,32 +372,32 @@
        "      <td>0.25</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000266</td>\n",
+       "      <td>0.000009</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6-sided die</th>\n",
        "      <td>0.25</td>\n",
-       "      <td>0.000772</td>\n",
-       "      <td>0.000193</td>\n",
-       "      <td>0.000266</td>\n",
-       "      <td>0.725212</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000009</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8-sided die</th>\n",
        "      <td>0.25</td>\n",
-       "      <td>0.000244</td>\n",
-       "      <td>0.000061</td>\n",
-       "      <td>0.000266</td>\n",
-       "      <td>0.229462</td>\n",
+       "      <td>0.000031</td>\n",
+       "      <td>0.000008</td>\n",
+       "      <td>0.000009</td>\n",
+       "      <td>0.883636</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12-sided die</th>\n",
        "      <td>0.25</td>\n",
-       "      <td>0.000048</td>\n",
-       "      <td>0.000012</td>\n",
-       "      <td>0.000266</td>\n",
-       "      <td>0.045326</td>\n",
+       "      <td>0.000004</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000009</td>\n",
+       "      <td>0.116364</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -311,13 +405,13 @@
       ],
       "text/plain": [
        "              priors  likelihood  unnormalized_posterior  prob_data  posterior\n",
-       "4-sided die     0.25    0.000000                0.000000   0.000266   0.000000\n",
-       "6-sided die     0.25    0.000772                0.000193   0.000266   0.725212\n",
-       "8-sided die     0.25    0.000244                0.000061   0.000266   0.229462\n",
-       "12-sided die    0.25    0.000048                0.000012   0.000266   0.045326"
+       "4-sided die     0.25    0.000000                0.000000   0.000009   0.000000\n",
+       "6-sided die     0.25    0.000000                0.000000   0.000009   0.000000\n",
+       "8-sided die     0.25    0.000031                0.000008   0.000009   0.883636\n",
+       "12-sided die    0.25    0.000004                0.000001   0.000009   0.116364"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,8 +428,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Above results that the posterior for a 6 sided die increases, since each time I am getting only 6 after rollin"
+    "* Above results that the posterior for a 6 sided die increases, since each time I am getting only 6 after rolling in, there is no other number I getting after rolling in the dice."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
