--- a/bayesian_made_simple/dice_01.ipynb
+++ b/bayesian_made_simple/dice_01.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-24T07:30:23.578353Z",
-     "start_time": "2021-05-24T07:30:21.418887Z"
+     "end_time": "2021-05-24T08:48:23.537398Z",
+     "start_time": "2021-05-24T08:48:22.046948Z"
     }
    },
    "outputs": [
@@ -60,11 +60,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-24T08:42:41.686984Z",
-     "start_time": "2021-05-24T08:42:41.676474Z"
+     "end_time": "2021-05-24T08:48:23.553336Z",
+     "start_time": "2021-05-24T08:48:23.540280Z"
     }
    },
    "outputs": [],
@@ -107,11 +107,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-24T08:42:51.328697Z",
-     "start_time": "2021-05-24T08:42:51.304406Z"
+     "end_time": "2021-05-24T08:50:00.266513Z",
+     "start_time": "2021-05-24T08:50:00.241807Z"
     }
    },
    "outputs": [
@@ -149,32 +149,32 @@
        "      <td>0.25</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000009</td>\n",
+       "      <td>0.09375</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6-sided die</th>\n",
        "      <td>0.25</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000009</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>0.041667</td>\n",
+       "      <td>0.09375</td>\n",
+       "      <td>0.444444</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8-sided die</th>\n",
        "      <td>0.25</td>\n",
-       "      <td>0.000031</td>\n",
-       "      <td>0.000008</td>\n",
-       "      <td>0.000009</td>\n",
-       "      <td>0.883636</td>\n",
+       "      <td>0.125000</td>\n",
+       "      <td>0.031250</td>\n",
+       "      <td>0.09375</td>\n",
+       "      <td>0.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12-sided die</th>\n",
        "      <td>0.25</td>\n",
-       "      <td>0.000004</td>\n",
-       "      <td>0.000001</td>\n",
-       "      <td>0.000009</td>\n",
-       "      <td>0.116364</td>\n",
+       "      <td>0.083333</td>\n",
+       "      <td>0.020833</td>\n",
+       "      <td>0.09375</td>\n",
+       "      <td>0.222222</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -182,19 +182,19 @@
       ],
       "text/plain": [
        "              priors  likelihood  unnormalized_posterior  prob_data  posterior\n",
-       "4-sided die     0.25    0.000000                0.000000   0.000009   0.000000\n",
-       "6-sided die     0.25    0.000000                0.000000   0.000009   0.000000\n",
-       "8-sided die     0.25    0.000031                0.000008   0.000009   0.883636\n",
-       "12-sided die    0.25    0.000004                0.000001   0.000009   0.116364"
+       "4-sided die     0.25    0.000000                0.000000    0.09375   0.000000\n",
+       "6-sided die     0.25    0.166667                0.041667    0.09375   0.444444\n",
+       "8-sided die     0.25    0.125000                0.031250    0.09375   0.333333\n",
+       "12-sided die    0.25    0.083333                0.020833    0.09375   0.222222"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = [8, 7, 7, 5, 4]\n",
+    "data = [6]\n",
     "dice_sides = [4,6,8,12]\n",
     "priors_index = ['4-sided die', '6-sided die', '8-sided die', '12-sided die']\n",
     "result = dice_result(data, dice_sides, priors_index)\n",
@@ -213,10 +213,220 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-24T08:48:23.616816Z",
+     "start_time": "2021-05-24T08:48:23.586755Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>priors</th>\n",
+       "      <th>likelihood</th>\n",
+       "      <th>unnormalized_posterior</th>\n",
+       "      <th>prob_data</th>\n",
+       "      <th>posterior</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4-sided die</th>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000266</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6-sided die</th>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.000772</td>\n",
+       "      <td>0.000193</td>\n",
+       "      <td>0.000266</td>\n",
+       "      <td>0.725212</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8-sided die</th>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.000244</td>\n",
+       "      <td>0.000061</td>\n",
+       "      <td>0.000266</td>\n",
+       "      <td>0.229462</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12-sided die</th>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.000048</td>\n",
+       "      <td>0.000012</td>\n",
+       "      <td>0.000266</td>\n",
+       "      <td>0.045326</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              priors  likelihood  unnormalized_posterior  prob_data  posterior\n",
+       "4-sided die     0.25    0.000000                0.000000   0.000266   0.000000\n",
+       "6-sided die     0.25    0.000772                0.000193   0.000266   0.725212\n",
+       "8-sided die     0.25    0.000244                0.000061   0.000266   0.229462\n",
+       "12-sided die    0.25    0.000048                0.000012   0.000266   0.045326"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = [6,6,6,6]\n",
+    "dice_sides = [4,6,8,12]\n",
+    "priors_index = ['4-sided die', '6-sided die', '8-sided die', '12-sided die']\n",
+    "result = dice_result(data, dice_sides, priors_index)\n",
+    "result_df = result.GetPosterior()\n",
+    "result_df"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "* Above results that the posterior for a 6 sided die increases, since each time I am getting only 6 after rolling in, there is no other number I getting after rolling in the dice."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The dice problem_03\n",
+    "\n",
+    "\n",
+    "* Suppose I randomly keep selecting a dice and get the following results rolling in the randomly selected dice as [6,8,7,7,5,4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-24T08:57:53.047999Z",
+     "start_time": "2021-05-24T08:57:53.026352Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>priors</th>\n",
+       "      <th>likelihood</th>\n",
+       "      <th>unnormalized_posterior</th>\n",
+       "      <th>prob_data</th>\n",
+       "      <th>posterior</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4-sided die</th>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6-sided die</th>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8-sided die</th>\n",
+       "      <td>0.25</td>\n",
+       "      <td>3.814697e-06</td>\n",
+       "      <td>9.536743e-07</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.919294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12-sided die</th>\n",
+       "      <td>0.25</td>\n",
+       "      <td>3.348980e-07</td>\n",
+       "      <td>8.372449e-08</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.080706</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              priors    likelihood  unnormalized_posterior  prob_data  \\\n",
+       "4-sided die     0.25  0.000000e+00            0.000000e+00   0.000001   \n",
+       "6-sided die     0.25  0.000000e+00            0.000000e+00   0.000001   \n",
+       "8-sided die     0.25  3.814697e-06            9.536743e-07   0.000001   \n",
+       "12-sided die    0.25  3.348980e-07            8.372449e-08   0.000001   \n",
+       "\n",
+       "              posterior  \n",
+       "4-sided die    0.000000  \n",
+       "6-sided die    0.000000  \n",
+       "8-sided die    0.919294  \n",
+       "12-sided die   0.080706  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = [6,8,7,7,5,4]\n",
+    "dice_sides = [4,6,8,12]\n",
+    "priors_index = ['4-sided die', '6-sided die', '8-sided die', '12-sided die']\n",
+    "result = dice_result(data, dice_sides, priors_index)\n",
+    "result_df = result.GetPosterior()\n",
+    "result_df"
    ]
   },
   {
